--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js: lts/*
 before_script:
   - npm install -g gitbook-cli
   - gitbook install
-script: gitbook serve
-before_deploy:
+script: gitbook build
+before_deploy: touch _book/.nojekyll
 deploy:
   provider: pages:git
   edge: true # opt in to dpl v2
